--- a/ministere.html
+++ b/ministere.html
@@ -492,7 +492,20 @@
     <div class="parent flex-one">
       <div class="child2">
         <h2>CHAMBRE HAUTE</h2>
-        <p></p>
+        <p>
+          Les mardis fériés prennent une signification spéciale grâce à notre
+          programme unique, la "Chambre Haute". C'est un moment où nous nous
+          rassemblons pour une expérience spirituelle profonde et méditative,
+          conçue pour nourrir nos âmes et renforcer notre connexion avec Dieu.
+        </p>
+        <p>
+          Le "Chambre Haute" tire son nom de l'endroit où Jésus et ses disciples
+          se sont réunis pour la Cène, un lieu empreint de spiritualité et de
+          communion. De la même manière, notre programme vise à recréer cet
+          esprit de proximité avec Dieu. Chaque mardi férié, nous nous
+          réunissons pour la prière, la méditation, et la réflexion spirituelle,
+          dans un cadre calme et paisible.
+        </p>
         <a
           class="btn btn-outline-primary py-2 px-3"
           href="https://www.facebook.com/Samuel.DALUM"
