--- a/index.html
+++ b/index.html
@@ -558,6 +558,8 @@ background-image: url("./img/dalum2.jpg");
 
 
     </div>
+
+    
     <!-- <div class="box tall-box important">
       <div class="flex-container">
         <span class="icon">&#128722;</span>
@@ -885,7 +887,7 @@ BOUTIQUE
           </div>
         </div>
       </div>
-      <div id="live-icon" style="display: none;">      <a href="https://www.facebook.com/mawunadalum" target="_blank">  <img src="./img/live.jpg" style="z-index: 10000;  position: fixed;bottom: 60px;left: 0;border-radius: 100%;cursor: pointer;" alt="WhatsApp" width="50" height="50"></a>
+      <div id="live-icon" style="display: none;">      <a href="https://zeno.fm/radio/la-grace-parle/" target="_blank">  <img src="./img/live.jpg" style="z-index: 10000;  position: fixed;bottom: 100px;left: 10;border-radius: 100%;cursor: pointer;" alt="WhatsApp" width="50" height="50"></a>
       </div>
 
       <!-- Collez le code d'intégration de Facebook ci-dessous -->
@@ -894,7 +896,7 @@ BOUTIQUE
    
       
       <a href="https://api.whatsapp.com/send?phone=+22953037832&text=`Bonjour, j'ai découvert ce lien sur votre site web et je souhaiterais obtenir de plus amples informations concernant la Fondation La Grâce Parle.` " target="_blank">
-        <img src="./img/whatsapp-icon.png" style="z-index: 10000;  position: fixed;bottom: 0;left: 0;border-radius: 100%;" alt="WhatsApp" width="50" height="50">
+        <img src="./img/whatsapp-icon.png" style="z-index: 10000;  position: fixed;bottom: 30px;left: 10;border-radius: 100%;" alt="WhatsApp" width="50" height="50">
     </a>
     </div>
     <!-- Footer End -->
