--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@ background-image: url("./img/dalum2.jpg");
                 <a href="ministere.html" class="dropdown-item"
                   >Centre La Grâce Parle </a
                 >
-                <a href="fanfare.html" class="dropdown-item"
+                <a href="philharmonie.html" class="dropdown-item"
                   >L'Orchestre Philharmonie</a
                 >
                 <a href="humanitaire.html" class="dropdown-item"
@@ -503,7 +503,7 @@ background-image: url("./img/dalum2.jpg");
                       Philharmonie La Grâce Parle : La Parole en Mélodie. Notre
                       groupe chrétien de musique résonne avec l'amour divin.
                     </p> -->
-                    <button class="mui-button secondary-button"><a href="fanfare.html">DECOUVRIR</a></button>
+                    <button class="mui-button secondary-button"><a href="philharmonie.html">DECOUVRIR</a></button>
                   </div>
                 </div>
               </div>
@@ -706,8 +706,8 @@ BOUTIQUE
       <p>
         Notre branche de musique Philharmonie La Grâce Parle offre une variété de services pour répondre aux besoins de nos communautés. Nous organisons des concerts en direct pour partager notre musique et notre message de foi. Nous proposons également des ateliers de musique pour aider les gens à développer leurs compétences et leur passion pour la musique. Enfin, nous sommes fiers de collaborer avec d'autres artistes pour créer des projets musicaux uniques et inspirants. Chez nous, la musique est plus qu'un simple divertissement, c'est une expérience de foi et de communauté.
       </p>
-      <a class="btn btn-outline-primary py-2 px-3" href="">
-        Visiter le site web
+      <a class="btn btn-outline-primary py-2 px-3" href="philharmonie.html">
+        En savoir plus
         <div
           class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2"
         >
