--- a/mentions.html
+++ b/mentions.html
@@ -165,7 +165,7 @@
                 <a href="ministere.html" class="dropdown-item"
                   >Le centre chrétien</a
                 >
-                <a href="fanfare.html" class="dropdown-item"
+                <a href="philharmonie.html" class="dropdown-item"
                   >L'Orchestre Philharmonie</a
                 >
                 <a href="humanitaire.html" class="dropdown-item"
@@ -363,10 +363,8 @@
         <div class="answer">
           <p>Le responsable du traitement des données sur ce site Web est :</p>
           <ul>
-            <li>Téléphone : +49 (0)40 / 88 88 88 4 4 11-11</li>
-            <li>Fax : +49 (0)40 / 88 88 88 4 4 11-12</li>
-            <li>Courriel : kontakt@joyce-meyer.d</li>
-            <li>Téléphone : 49 (0)40 / 88 88 88 4 4 11 11 11 11</li>
+            <li>Téléphone : +229</li>
+            <li>Courriel : messagerie@lagraceparle.org</li>
           </ul>
           <p>
             L'organisme responsable est la personne physique ou morale qui,
