--- a/philharmonie.html
+++ b/philharmonie.html
@@ -315,7 +315,7 @@
                 <a href="ministere.html" class="dropdown-item"
                   >Centre La Grâce Parle
                 </a>
-                <a href="fanfare.html" class="dropdown-item active"
+                <a href="philharmonie.html" class="dropdown-item active"
                   >L'Orchestre Philharmonie</a
                 >
                 <a href="humanitaire.html" class="dropdown-item"
@@ -672,12 +672,12 @@
     <header>
       <h1>Rejoignez à présent notre philharmonie.</h1>
     </header>
-    <p>
+    <p style="padding: 15px">
       Rejoignez notre prestigieuse philharmonie en remplissant simplement notre
       formulaire d'adhésion ! L'expérience musicale de toute une vie vous attend
       au sein de notre orchestre renommé.
     </p>
-    <p>
+    <p style="padding: 15px">
       Pour devenir membre de notre philharmonie, il vous suffit de remplir le
       formulaire d'adhésion en ligne. Vous nous fournirez quelques informations
       de base, telles que vos coordonnées, votre expérience musicale, et
@@ -703,11 +703,9 @@
         <option value="Accordéon">Accordéon</option>
         <option value="Batterie">Batterie</option>
         <option value="Baryton">Baryton</option>
-
         <option value="ContreBasse">ContreBasse</option>
         <option value="Cornet">Cornet</option>
         <option value="Cor d'harmonie">Cor d'harmonie</option>
-        <option value="comores">Comores</option>
 
         <option value="Caisse claire">Caisse claire</option>
         <option value="Clarinette">Clarinette</option>
