--- a/temoignage.html
+++ b/temoignage.html
@@ -355,7 +355,7 @@
                 <a href="ministere.html" class="dropdown-item"
                   >Centre La Grâce Parle
                 </a>
-                <a href="fanfare.html" class="dropdown-item"
+                <a href="philharmonie.html" class="dropdown-item"
                   >L'Orchestre Philharmonie</a
                 >
                 <a href="humanitaire.html" class="dropdown-item"
