--- a/index.html
+++ b/index.html
@@ -614,14 +614,14 @@ BOUTIQUE
   >
     Ce que nous faisons
   </div>
-  <h1 class="display-6 mb-5" style="text-align: center;">
+  <h2 style="text-align: center;text-decoration: underline;" >
     Apprenez-en plus sur ce que nous faisons et impliquez-vous
-  </h1>
+  </h2>
   <div class="parent">
     <div class="child1"></div>
     <div class="child2">
-      <h2>
-        Visite Émotionnelle à l'Orphelinat</h2>
+      <h3>
+        Visite Émotionnelle à l'Orphelinat</h3>
       <p>
         Nous avons une mission profonde : apporter de l'espoir, du soutien et des opportunités aux enfants qui ont perdu leurs parents. Nous croyons que chaque enfant mérite un avenir prometteur, et c'est pourquoi nous travaillons sans relâche pour réaliser cette vision. Nous nous engageons à visiter régulièrement les orphelins, à établir des liens affectueux et à leur offrir une éducation de qualité. Nous sommes déterminés à les préparer pour un avenir brillant, en les dotant des compétences et des ressources nécessaires pour réussir dans la vie. Rejoignez notre cause en tant que bénévole, en faisant un don ou en découvrant nos initiatives. Ensemble, nous pouvons éclairer l'avenir des orphelins, un acte de bonté à la fois.
       </p>
@@ -633,9 +633,9 @@ BOUTIQUE
         </a>
     </div>
   </div>
-  <div class="parent">
+  <div class="parent flex-one">
     <div class="child2">
-      <h2>Brigade de Prière</h2>
+      <h3>Brigade de Prière</h3>
       <p>
         La brigade de Prière est un programme qui se déroule au sein de notre
         centre, les Mardis, Vendredi, Dimanche et les Lundi en Direct sur la
@@ -661,9 +661,13 @@ BOUTIQUE
       </a>
     
     </div>
+ 
     <div class="child7"></div>
     
   </div>
+  
+
+
   <div class="containers">
     <div class="boxs box1s">
       <div class="icons">
@@ -699,10 +703,16 @@ BOUTIQUE
    
     </div>
   </div>
+  <h2 style="text-align: center;">Exprimez votre gratitude et plantez la graine de l'abondance d'un simple clic.</h2>
+
+  <div class="child14"></div>
+  <br>
+  <h2 style="text-align: center;">Découvrez la philharmonie La Grâce Parle</h2>
+
   <div class="parent">
     <div class="child9"></div>
     <div class="child2">
-      <h2>Philharmonie La Grâce Parle </h2>
+      <h3>Philharmonie La Grâce Parle </h3>
       <p>
         Notre branche de musique Philharmonie La Grâce Parle offre une variété de services pour répondre aux besoins de nos communautés. Nous organisons des concerts en direct pour partager notre musique et notre message de foi. Nous proposons également des ateliers de musique pour aider les gens à développer leurs compétences et leur passion pour la musique. Enfin, nous sommes fiers de collaborer avec d'autres artistes pour créer des projets musicaux uniques et inspirants. Chez nous, la musique est plus qu'un simple divertissement, c'est une expérience de foi et de communauté.
       </p>
