--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@ BOUTIQUE
    
     </div>
   </div>
-  <h2 style="text-align: center;">Exprimez votre gratitude et plantez la graine de l'abondance d'un simple clic.</h2>
+  <h2 style="text-align: center;">Exprimez votre gratitude et plantez la graine de l'abondance en un simple clic.</h2>
 
   <div class="child14"></div>
   <br>
@@ -767,7 +767,7 @@ BOUTIQUE
                 <li style='text-align:center'> Nous vous contacterons pour coordonner la collecte du don en nature, en gardant à l'esprit l'amour et le respect qui nous unissent.</li>
                 <li>Consulter le formulaire et suivez les étapes indiquez : <a href='contact.html#subscribeForm' style="color: #FFC300;">Remplissez le formulaire</a></li>
               </ol>
-              <h6 style='text-align:center'>Que Dieu vous bénisse abondamment pour votre engagement et votre sacrifice. Ensemble, nous faisons la différence dans le monde.</h6>
+              <p style='text-align:center'>Que Dieu vous bénisse abondamment pour votre engagement et votre sacrifice. Ensemble, nous faisons la différence dans le monde.</p>
             </div>
             <h3>Don En Espèce</h3>
             <div class="col-12">
@@ -897,7 +897,7 @@ BOUTIQUE
           </div>
         </div>
       </div>
-      <div id="live-icon" style="display: none;">      <a href="https://zeno.fm/radio/la-grace-parle/" target="_blank">  <img src="./img/live.jpg" style="z-index: 10000;  position: fixed;bottom: 100px;left: 10;border-radius: 100%;cursor: pointer;" alt="WhatsApp" width="50" height="50"></a>
+      <div id="live-icon" style="display: none;">      <a href="https://zeno.fm/radio/la-grace-parle/" target="_blank">  <img src="./img/live2.webp" style="z-index: 10000;  position: fixed;bottom: 100px;left: 10;border-radius: 100%;cursor: pointer;" alt="WhatsApp" width="50" height="50"></a>
       </div>
 
       <!-- Collez le code d'intégration de Facebook ci-dessous -->
