--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@ BOUTIQUE
   >
     Ce que nous faisons
   </div>
-  <h2 style="text-align: center;text-decoration: underline;" >
+  <h2 style="text-align: center;" >
     Apprenez-en plus sur ce que nous faisons et impliquez-vous
   </h2>
   <div class="parent">
@@ -704,7 +704,8 @@ BOUTIQUE
     </div>
   </div>
   <h2 style="text-align: center;">Exprimez votre gratitude et plantez la graine de l'abondance en un simple clic.</h2>
-
+  <button class="mui-button secondary-button"><a href="tel:*80*41*100000*montant#">DECOUVRIR</a></button>
+   <button class="mui-button secondary-button"><a href="ministere.html">DECOUVRIR</a></button>
   <div class="child14"></div>
   <br>
   <h2 style="text-align: center;">Découvrez la philharmonie La Grâce Parle</h2>
