--- a/index.html
+++ b/index.html
@@ -704,8 +704,11 @@ BOUTIQUE
     </div>
   </div>
   <h2 style="text-align: center;">Exprimez votre gratitude et plantez la graine de l'abondance en un simple clic.</h2>
-  <button class="mui-button secondary-button"><a href="tel:*80*41*100000*montant#">DECOUVRIR</a></button>
-   <button class="mui-button secondary-button"><a href="ministere.html">DECOUVRIR</a></button>
+  <p style="padding: 15px;">Pour exprimer votre action de grâce avec MTN, saisissez le montant suivi de #. Pour Moov, composez *1 suivi de # en cliquant sue l'un des button. </p>
+  <p style="padding: 15px;">Vous pouvez entrer manuellement le code en bas l'affiche, que ce soit pour MTN ou Moov.</p>
+  <p style="padding: 15px;">  <button class="mui-button secondary-button"><a href="tel:*880*41*100000*">MTN</a></button>
+    <button class="mui-button primary"><a href="tel:*855*4*1*86260*">MOOV</a></button></p>
+
   <div class="child14"></div>
   <br>
   <h2 style="text-align: center;">Découvrez la philharmonie La Grâce Parle</h2>
