--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@ BOUTIQUE
       <h3>
         Visite Émotionnelle à l'Orphelinat</h3>
       <p>
-        Nous avons une mission profonde : apporter de l'espoir, du soutien et des opportunités aux enfants qui ont perdu leurs parents. Nous croyons que chaque enfant mérite un avenir prometteur, et c'est pourquoi nous travaillons sans relâche pour réaliser cette vision. Nous nous engageons à visiter régulièrement les orphelins, à établir des liens affectueux et à leur offrir une éducation de qualité. Nous sommes déterminés à les préparer pour un avenir brillant, en les dotant des compétences et des ressources nécessaires pour réussir dans la vie. Rejoignez notre cause en tant que bénévole, en faisant un don ou en découvrant nos initiatives. Ensemble, nous pouvons éclairer l'avenir des orphelins, un acte de bonté à la fois.
+        Nous avons une mission profonde : apporter de l'espoir, du soutien et des opportunités aux enfants qui ont perdu leurs parents. Nous croyons que chaque enfant mérite un avenir prometteur, et .....
       </p>
       <a class="btn btn-outline-primary py-2 px-3"  href="humanitaire.html">
      En savoir plus
@@ -640,13 +640,7 @@ BOUTIQUE
         La brigade de Prière est un programme qui se déroule au sein de notre
         centre, les Mardis, Vendredi, Dimanche et les Lundi en Direct sur la
         radio Maranata(103.1). C'est un programme ou les personnes de toute
-        communauté religieuse se rassemblent pour élever leur voix à Dieu pour
-        une intervention divine de notre seigneur Jésus que ce soit pour la
-        guérison, le travail, la santé et d'autres bénédictions divines. Nous
-        offrons un espace de prière et d'intercession pour les besoins
-        spirituels et matériels de chacun. Vous pouvez nous joindre pour nos
-        séances de prières visant à solliciter les bénédictions de Dieu dans
-        divers aspects de votre vie.
+        communauté ......
       </p>
       <a
         class="btn btn-outline-primary py-2 px-3"
@@ -705,7 +699,7 @@ BOUTIQUE
   </div>
   <h2 style="text-align: center;">Exprimez votre gratitude et plantez la graine de l'abondance en un simple clic.</h2>
   <p style="padding: 15px;">Pour exprimer votre action de grâce avec MTN, saisissez le montant suivi de #. Pour Moov, composez *1 suivi de # en cliquant sue l'un des button. </p>
-  <p style="padding: 15px;">Vous pouvez entrer manuellement le code en bas l'affiche, que ce soit pour MTN ou Moov.</p>
+  <p style="padding: 15px;">Vous pouvez entrer manuellement le code sur l'affiche, que ce soit pour MTN ou Moov.</p>
   <p style="padding: 15px;">  <button class="mui-button secondary-button"><a href="tel:*880*41*100000*">MTN</a></button>
     <button class="mui-button primary"><a href="tel:*855*4*1*86260*">MOOV</a></button></p>
 
